--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body style="background: linear-gradient(to right, #00b09b, #96c93d);">
     <br>
-    <button><a href="https://www.google.com" style="text-decoration: none; font-size: 20px; 
+    <button><a href="https://lastairbender07.github.io/UID_End_Sem_Project/" style="text-decoration: none; font-size: 20px; 
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Main Page</a></button>
     <div id="container">
         <h1 align="center" style="color: #fff;">FORM VALIDATION</h1>
